--- a/embedded-db-junit/pom.xml
+++ b/embedded-db-junit/pom.xml
@@ -7,12 +7,16 @@
     <parent>
         <groupId>org.zapodot</groupId>
         <artifactId>embedded-db-junit-parent</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>embedded-db-junit</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>embedded-db-core</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
