--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.zapodot</groupId>
     <artifactId>embedded-db-junit-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <properties>
         <byte-buddy.version>1.8.11</byte-buddy.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
@@ -22,6 +22,7 @@
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
         <mockito.version>2.18.3</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -112,6 +113,11 @@
     </profiles>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>embedded-db-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>embedded-db-junit</artifactId>
@@ -221,6 +227,7 @@
                         <encoding>UTF-8</encoding>
                         <links>
                             <link>https://junit.org/junit4/javadoc/latest/</link>
+                            <link>https://junit.org/junit5/docs/current/api/</link>
                             <link>https://docs.oracle.com/javase/8/docs/api/</link>
                         </links>
                         <locale>en</locale>
@@ -240,6 +247,10 @@
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.eluder.coveralls</groupId>
@@ -292,7 +303,9 @@
         </plugins>
     </build>
     <modules>
+        <module>embedded-db-core</module>
         <module>embedded-db-junit</module>
+        <module>embedded-db-junit5</module>
         <module>embedded-db-junit-liquibase</module>
         <module>embedded-db-flyway</module>
     </modules>
