--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,10 @@
         <junit-jupiter.version>5.3.0</junit-jupiter.version>
         <junit-platform.version>1.3.0</junit-platform.version>
         <liquibase.version>3.6.2</liquibase.version>
+        <maven-build-info-plugin.version>1.2</maven-build-info-plugin.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+        <maven-git-commit-id-plugin.version>2.2.5</maven-git-commit-id-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
@@ -275,6 +277,58 @@
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>pl.project13.maven</groupId>
+                    <artifactId>git-commit-id-plugin</artifactId>
+                    <version>${maven-git-commit-id-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>get-the-git-infos</id>
+                            <goals>
+                                <goal>revision</goal>
+                            </goals>
+                            <phase>initialize</phase>
+                        </execution>
+                        <execution>
+                            <id>validate-the-git-infos</id>
+                            <goals>
+                                <goal>validateRevision</goal>
+                            </goals>
+                            <phase>package</phase>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <excludeProperties>
+                            <excludeProperty>git.build.*</excludeProperty>
+                        </excludeProperties>
+                        <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.rodiontsev.maven.plugins</groupId>
+                    <artifactId>build-info-maven-plugin</artifactId>
+                    <version>${maven-build-info-plugin.version}</version>
+                    <configuration>
+                        <filename>classes/build.info.properties</filename>
+                        <includeVcsInfo>false</includeVcsInfo>
+                        <dateTimePattern>yyyy-MM-dd HH:mm:ss</dateTimePattern>
+                        <projectProperties>
+                            <projectProperty>project.id</projectProperty>
+                            <projectProperty>project.groupId</projectProperty>
+                            <projectProperty>project.artifactId</projectProperty>
+                            <projectProperty>project.version</projectProperty>
+                        </projectProperties>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>generate-build-info</id>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>extract</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
