--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jdk:
 after_success:
 - mvn test jacoco:report coveralls:report
 - echo "<settings><servers><server><id>sonatype-nexus-snapshots</id><username>\${env.REPO_USER}</username><password>\${env.REPO_KEY}</password></server></servers></settings>" > ~/settings.xml
-- mvn deploy --settings ~/settings.xml
+- mvn -DskipTests deploy --settings ~/settings.xml
 addons:
   coverity_scan:
     project:
