--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.zapodot</groupId>
     <artifactId>embedded-db-junit-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.2</version>
+    <version>1.1.3-SNAPSHOT</version>
     <properties>
         <byte-buddy.version>1.9.13</byte-buddy.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
