--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
         <junit.version>4.12</junit.version>
-        <junit-jupiter.version>5.3.0</junit-jupiter.version>
-        <junit-platform.version>1.3.0</junit-platform.version>
+        <junit-jupiter.version>5.5.2</junit-jupiter.version>
         <liquibase.version>3.6.2</liquibase.version>
         <maven-build-info-plugin.version>1.2</maven-build-info-plugin.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -30,7 +29,7 @@
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <mockito.version>2.23.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -132,6 +131,27 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>embedded-db-junit5</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>embedded-db-flyway</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>embedded-db-junit-liquibase</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>embedded-db-liquibase</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
@@ -200,6 +220,13 @@
                 <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -240,7 +267,7 @@
                         <links>
                             <link>https://junit.org/junit4/javadoc/latest/</link>
                             <link>https://junit.org/junit5/docs/current/api/</link>
-                            <link>https://docs.oracle.com/javase/8/docs/api/</link>
+                            <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
                         </links>
                         <locale>en</locale>
                         <keywords>true</keywords>
@@ -250,6 +277,7 @@
                         <bottom>
                             <![CDATA[Copyright &#169; 2014&#x2014;{currentYear} <a href="http://zapodot.org">Sondre Eikanger Kval&oslash;</a>. All rights reserved..]]>
                         </bottom>
+                        <doclint>none</doclint>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -372,5 +400,6 @@
         <module>embedded-db-junit5</module>
         <module>embedded-db-junit-liquibase</module>
         <module>embedded-db-flyway</module>
+        <module>embedded-db-plugin-jupiter-tests</module>
     </modules>
 </project>
