--- a/pom.xml
+++ b/pom.xml
@@ -397,7 +397,7 @@
     <modules>
         <module>embedded-db-core</module>
         <module>embedded-db-junit</module>
-        <module>embedded-db-junit5</module>
+        <module>embedded-db-jupiter</module>
         <module>embedded-db-junit-liquibase</module>
         <module>embedded-db-flyway</module>
         <module>embedded-db-plugin-jupiter-tests</module>
