--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,15 @@
         <byte-buddy.version>1.9.2</byte-buddy.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
         <flyway.version>5.2.0</flyway.version>
-        <guava.version>27.0-jre</guava.version>
-        <h2.version>1.4.197</h2.version>
+        <guava.version>28.1-jre</guava.version>
+        <h2.version>1.4.200</h2.version>
         <hsqldb.version>2.4.1</hsqldb.version>
         <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
         <junit.version>4.12</junit.version>
         <junit-jupiter.version>5.5.2</junit-jupiter.version>
-        <liquibase.version>3.6.2</liquibase.version>
+        <liquibase.version>3.8.0</liquibase.version>
         <maven-build-info-plugin.version>1.2</maven-build-info-plugin.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
@@ -132,7 +132,7 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>embedded-db-junit5</artifactId>
+                <artifactId>embedded-db-jupiter</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
