--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
     <packaging>pom</packaging>
     <version>2.0-SNAPSHOT</version>
     <properties>
-        <byte-buddy.version>1.9.2</byte-buddy.version>
+        <byte-buddy.version>1.9.10</byte-buddy.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
         <flyway.version>5.2.0</flyway.version>
         <guava.version>28.1-jre</guava.version>
         <h2.version>1.4.200</h2.version>
-        <hsqldb.version>2.4.1</hsqldb.version>
+        <hsqldb.version>2.5.0</hsqldb.version>
         <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
@@ -30,13 +30,14 @@
         <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <mockito.version>2.23.0</mockito.version>
+        <mockito.version>3.1.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rxjava-jdbc.version>0.7.16</rxjava-jdbc.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <spring-jdbc.version>5.1.1.RELEASE</spring-jdbc.version>
+        <spring-jdbc.version>5.2.1.RELEASE</spring-jdbc.version>
         <sql2o.version>1.6.0</sql2o.version>
+        <hamcrest.version>2.2</hamcrest.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
@@ -186,6 +187,12 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
