--- a/pom.xml
+++ b/pom.xml
@@ -15,20 +15,20 @@
         <guava.version>28.1-jre</guava.version>
         <h2.version>1.4.200</h2.version>
         <hsqldb.version>2.5.0</hsqldb.version>
-        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
         <junit.version>4.12</junit.version>
         <junit-jupiter.version>5.5.2</junit-jupiter.version>
         <liquibase.version>3.8.0</liquibase.version>
-        <maven-build-info-plugin.version>1.2</maven-build-info-plugin.version>
-        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-build-info-plugin.version>1.3</maven-build-info-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-        <maven-git-commit-id-plugin.version>2.2.5</maven-git-commit-id-plugin.version>
+        <maven-git-commit-id-plugin.version>3.0.1</maven-git-commit-id-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <mockito.version>3.1.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
@@ -39,9 +39,6 @@
         <sql2o.version>1.6.0</sql2o.version>
         <hamcrest.version>2.2</hamcrest.version>
     </properties>
-    <prerequisites>
-        <maven>3.2.0</maven>
-    </prerequisites>
     <name>${project.artifactId}</name>
     <description>Library that provides a JUnit rule for setting up unit test using an embedded in-memory database (H2)
     </description>
@@ -285,6 +282,7 @@
                             <![CDATA[Copyright &#169; 2014&#x2014;{currentYear} <a href="http://zapodot.org">Sondre Eikanger Kval&oslash;</a>. All rights reserved..]]>
                         </bottom>
                         <doclint>none</doclint>
+                        <source>8</source>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -391,7 +389,7 @@
                 <configuration>
                     <rules>
                         <requireMavenVersion>
-                            <version>3.2.0</version>
+                            <version>3.6.0</version>
                         </requireMavenVersion>
                         <requireJavaVersion>
                             <version>${java.version}</version>
