--- a/pom.xml
+++ b/pom.xml
@@ -9,25 +9,26 @@
     <packaging>pom</packaging>
     <version>1.1.3-SNAPSHOT</version>
     <properties>
-        <byte-buddy.version>1.9.13</byte-buddy.version>
+        <byte-buddy.version>1.10.2</byte-buddy.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
-        <flyway.version>5.0.7</flyway.version>
-        <guava.version>27.1-jre</guava.version>
-        <h2.version>1.4.199</h2.version>
+        <flyway.version>6.0.8</flyway.version>
+        <guava.version>28.1-jre</guava.version>
+        <h2.version>1.4.200</h2.version>
         <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
         <junit.version>4.12</junit.version>
+        <liquibase.version>3.8.0</liquibase.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
-        <mockito.version>3.0.0</mockito.version>
+        <mockito.version>3.1.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rxjava-jdbc.version>0.7.16</rxjava-jdbc.version>
         <slf4j.version>1.7.26</slf4j.version>
-        <spring-jdbc.version>5.1.9.RELEASE</spring-jdbc.version>
+        <spring-jdbc.version>5.2.1.RELEASE</spring-jdbc.version>
         <sql2o.version>1.6.0</sql2o.version>
         <hsqldb.version>2.5.0</hsqldb.version>
     </properties>
