--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ jdk:
 after_success:
 - mvn clean test jacoco:report coveralls:report
 - echo "<settings><servers><server><id>sonatype-nexus-snapshots</id><username>\${env.REPO_USER}</username><password>\${env.REPO_KEY}</password></server></servers></settings>" > ~/settings.xml
+- .travis/aggregate-and-push-javadoc.sh
 - mvn deploy --settings ~/settings.xml
 addons:
   coverity_scan:
