--- a/embedded-db-junit/pom.xml
+++ b/embedded-db-junit/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.zapodot</groupId>
         <artifactId>embedded-db-junit-parent</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>embedded-db-junit</artifactId>
