--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ 1.8, 11, 15 ]
+        java-version: [ 1.8, 11, 15, 17 ]
 
     steps:
     - uses: actions/checkout@v2
@@ -44,6 +44,12 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v2
+    - name: Semantic Release
+      uses: cycjimmy/semantic-release-action@v2
+      with:
+        dry_run: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Set up Java 8
       uses: actions/setup-java@v1
       with:
