--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ 1.8, 11, 15, 17 ]
+        java-version: [ 1.8, 11, 17 ]
 
     steps:
     - uses: actions/checkout@v2
