--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,7 @@ jobs:
         verbose: true
 
   deploy:
+    if: ${{ success() && github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
     needs: build
     steps:
