--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,6 +45,16 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v2
+    - name: Bump version
+      uses: wlicamele-bw/pom-version-bump@v1.0
+      id: version
+      with:
+        bumpVersionType: bump
+        bumpVersion: patch
+        bumpChangelog: true
+        changelogDesc: ${{ github.event.pull_request.title }}
+    - name: Get the version number
+      run: echo "Next version is ${{ steps.bump.outputs.versionNumber }}"
     - name: Set up Java 8
       uses: actions/setup-java@v1
       with:
@@ -52,6 +62,8 @@ jobs:
         server-id: sonatype-nexus-snapshots
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
+
+
     - name: Run maven deploy
       run: mvn -B -DskipTests=true deploy --no-transfer-progress --file pom.xml
       env:
