--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,7 +54,7 @@ jobs:
         bumpChangelog: true
         changelogDesc: ${{ github.event.pull_request.title }}
     - name: Get the version number
-      run: echo "Next version is ${{ steps.bump.outputs.versionNumber }}"
+      run: echo "Next version is ${{ steps.version.outputs.versionNumber }}"
     - name: Set up Java 8
       uses: actions/setup-java@v1
       with:
